new mongoid settings for dev/test + fix a potential bug wit the fullpath method

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -9,11 +9,11 @@ defaults: &defaults
 
 development:
   <<: *defaults
-  database: locomotive_dev
+  database: locomotive_i18n_dev
 
 test:
   <<: *defaults
-  database: locomotive_test
+  database: locomotive_i18n_test
 
 # set these environment variables on your prod server
 production:
